k8s_servicemesh/01_hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: training
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "false"        
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: frontend
          image: eu.gcr.io/loodse-training-playground/kubernetes-servicemesh/frontend:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
